@@ -21,6 +21,17 @@ import java.nio.file.StandardCopyOption
 allprojects {
   apply plugin: 'idea'
 
+  // We got reports of invalid idea classpaths when major classpath changes (e.g. lucene update)
+  // has been merged and developers switching back and forth. This should enforce idea
+  // to not try to be smart.
+  // This enforces A "complete rewrite" causing all existing content to be discarded,
+  // thereby losing any changes made directly in the IDE but that should be fine for us.
+  idea.module.iml {
+    beforeMerged { module ->
+      module.dependencies.clear()
+    }
+  }
+
   tasks.named('idea').configure {
     doFirst { throw new GradleException("Use of the 'idea' task has been deprecated. For details on importing into IntelliJ see CONTRIBUTING.md.") }
   }
@@ -55,7 +66,7 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
       file(checkstyleConfig),
       file(checkstyleIdeFragment),
       file(checkstylePluginConfigTemplate)
-    )
+    ).withPathSensitivity(PathSensitivity.RELATIVE)
     outputs.files(
       file(checkstyleIdeConfig),
       file(checkstylePluginConfig)
@@ -218,7 +229,6 @@ if (providers.systemProperty('idea.active').getOrNull() == 'true') {
           defaults(JUnit) {
             vmParameters = [
               '-ea',
-              '-Djava.security.manager=allow',
               '-Djava.locale.providers=CLDR',
               '-Dtests.testfeatures.enabled=true',
               '-Des.nativelibs.path="' + testLibraryPath + '"',
